--- a/apps/web/app/[locale]/globals.css
+++ b/apps/web/app/[locale]/globals.css
@@ -1,15 +1,16 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
+* {
+  box-sizing: border-box;
+}
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 a {
@@ -74,18 +75,19 @@ a {
   --color-view-toggle-active: var(--view-toggle-active);
   --color-cart-button: var(--cart-button);
   --color-cart-button-hover: var(--cart-button-hover);
+  --color-product-card: var(--background);
   --color-product-card-hover: var(--product-card-hover);
 }
 
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: oklch(0.205 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: oklch(42.761% 0.00005 271.152);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -113,27 +115,27 @@ a {
 
   --view-toggle-active: oklch(94.864% 0.00182 249.189);
   --cart-button: oklch(66.755% 0.21117 36.889);
-  --cart-button-hover: oklch(56.75% 0.1758 37.084);
+  --cart-button-hover: oklch(56.75% 0.1758 37.084); 
   --product-card-hover: oklch(97.315% 0.00011 271.152);
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
+  --background: oklch(35.833% 0.07346 252.938);
+  --foreground: oklch(0.922 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
+  --popover: oklch(35.833% 0.07346 252.938);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
+  --primary: oklch(80.78% 0.00009 271.152);
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
+  --accent: oklch(30.392% 0.05357 252.746);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
+  --border: oklch(31.037% 0.06171 255.716);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
@@ -150,10 +152,10 @@ a {
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 
-  --view-toggle-active: oklch(94.864% 0.00182 249.189);
+  --view-toggle-active: oklch(25.628% 0.04659 253.357);
   --cart-button: oklch(66.755% 0.21117 36.889);
   --cart-button-hover: oklch(56.75% 0.1758 37.084);
-  --product-card-hover: oklch(97.315% 0.00011 271.152);
+  --product-card-hover: oklch(28.78% 0.05462 252.01);
 }
 
 @layer base {
@@ -161,6 +163,6 @@ a {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground antialiased;
   }
 }
