--- a/apps/web/app/[locale]/globals.css
+++ b/apps/web/app/[locale]/globals.css
@@ -77,6 +77,7 @@ a {
   --color-cart-button-hover: var(--cart-button-hover);
   --color-product-card: var(--background);
   --color-product-card-hover: var(--product-card-hover);
+  --color-general-button-hover: var(--general-button-hover);
 }
 
 :root {
@@ -117,6 +118,7 @@ a {
   --cart-button: oklch(66.755% 0.21117 36.889);
   --cart-button-hover: oklch(56.75% 0.1758 37.084); 
   --product-card-hover: oklch(97.315% 0.00011 271.152);
+  --general-button-hover: oklch(89.143% 0.0001 271.152);
 }
 
 .dark {
@@ -130,7 +132,7 @@ a {
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
+  --muted: oklch(30.392% 0.05357 252.746);
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(30.392% 0.05357 252.746);
   --accent-foreground: oklch(0.985 0 0);
@@ -156,6 +158,7 @@ a {
   --cart-button: oklch(66.755% 0.21117 36.889);
   --cart-button-hover: oklch(56.75% 0.1758 37.084);
   --product-card-hover: oklch(28.78% 0.05462 252.01);
+  --general-button-hover: oklch(22.68% 0.03468 252.826);
 }
 
 @layer base {
